# CommodiChain

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  TESTING.md  commodity_nft_readme.md
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.js
backend/src/controllers/: auth.controller.js  commodity.controller.js  nft.controller.js
backend/src/models/: commodity.model.js  nft.model.js
backend/src/routes/: auth.routes.js  commodity.routes.js  nft.routes.js
backend/src/services/: ipfs.service.js  soroban.service.js  stellar.service.js
contracts/: Cargo.toml  build.sh
contracts/commodity_nft/: Cargo.toml
contracts/commodity_nft/src/: lib.rs
contracts/custodian_registry/: Cargo.toml
contracts/custodian_registry/src/: lib.rs
docs/: api-reference.md  commits.md  development-log.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: LoadingSpinner.jsx  MintNFT.jsx  NFTCard.jsx  Navbar.jsx  SorobanMint.jsx  TransferOwnership.jsx  WalletConnect.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Mint.jsx  Verify.jsx
frontend/src/services/: api.js  freighterService.js  sorobanApi.js
scripts/: buildAndDeploy.sh  createTestAccounts.js  deploySorobanContracts.js  mintSampleNFT.js  testSorobanContracts.js  verifyNFT.js
